deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: f1fordummies
  labels:
    app.kubernetes.io/name: f1fordummies
