deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f1fordummies
  namespace: f1fordummies
spec:
  type: ClusterIP
  selector:
    app: f1fordummies
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
